# basketball-stats-worker

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
src/: schedule_puller.py  stats_puller.py
src/data/: entities.py
src/services/: stats.py
tests/: conftest.py  schedule_puller_test.py  stat_puller_test.py
tests/data_entity_tests/: entity_test.py
tests/service_tests/: game_test.py  player_test.py  schedule_test.py  stat_source_test.py  team_test.py
tests/test_files/: 20241201.parquet  boxscore.json  schedule.json  team.json
